# distributed-snake-game

./: README.md
backend/app/: config.py  main.py
backend/app/api/: input.py  state.py
backend/app/game/: board.py  game.py  snake.py
client/: client.py  main.py  renderer.py
controller/: CMakeLists.txt  README.md  test_server.py
controller/src/: comm.c  comm.h  config.h  joystick.c  joystick.h  lwipopts.h  main.c  system_state.c  system_state.h  types.h  wifi.c  wifi.h
controller/src/tasks/: comm_task.c  comm_task.h  joystick_task.c  joystick_task.h  system_task.c  system_task.h
docker/: Dockerfile.backend  docker-compose.yml
